--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "deploy": "nuxt generate && gh-pages -d dist -t true"
   },
   "dependencies": {
     "@nuxt/eslint": "1.8.0",
@@ -20,6 +21,7 @@
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@tailwindcss/postcss": "^4.1.11",
     "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
     "nuxt-svgo": "^4.2.6",
     "postcss": "^8.5.6",
     "sass-embedded": "^1.90.0",
