--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "deploy": "nuxt generate && gh-pages -d dist -t true --no-verify"
+    "deploy": "nuxt generate && gh-pages -d .output/public -r https://github.com/NeloGeek/qtim.git"
   },
   "dependencies": {
     "@nuxt/eslint": "1.8.0",
